--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body {
   align-items: center;
   width: 500px;
   padding: 0 10px;
+  position: relative;
 }
 
 .notes-bar {
@@ -54,6 +55,14 @@ body {
 
 .notes-bar::placeholder {
   font-family: 'Roboto', Arial;
+}
+
+.char-count {
+  font-size: 12px;
+  position: absolute;
+  bottom: 2px;
+  right: 68px;
+  color: rgb(151, 150, 150);
 }
 
 .note-it-button {
