--- a/login-page/login.css
+++ b/login-page/login.css
@@ -8,6 +8,11 @@ body {
   background-color: rgb(31, 32, 42);
 }
 
+a {
+  text-decoration: none;
+  color: white;
+}
+
 .login-container{
   display: flex;
   justify-content: center;
